secret/tls/ingress_httpd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - httpd.192.168.64.215.nip.io
    secretName: moomin-tls
  rules:
  - host: httpd.192.168.64.215.nip.io
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: httpd
            port:
              number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
